
[TestParseModuleNoErrors/ExprStmts - 1]
&ast.ExprStmt{
    Expr: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name:   "foo",
            Source: nil,
            span:   ast.Span{
                Start: ast.Location{Line:2, Column:5},
                End:   ast.Location{Line:2, Column:8},
            },
            inferredType: nil,
        },
        Args: {
        },
        OptChain: false,
        span:     ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:2, Column:10},
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:2, Column:10},
    },
}
---

[TestParseModuleNoErrors/VarDecls - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:2, Column:9},
                End:   ast.Location{Line:2, Column:10},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 5,
                span:  ast.Span{
                    Start: ast.Location{Line:2, Column:13},
                    End:   ast.Location{Line:2, Column:14},
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:2, Column:13},
                End:   ast.Location{Line:2, Column:14},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:2, Column:14},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:2, Column:14},
    },
}
---

[TestParseModuleNoErrors/FuncDecls - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "add",
            span: ast.Span{
                Start: ast.Location{Line:2, Column:8},
                End:   ast.Location{Line:2, Column:11},
            },
        },
        FuncSig: ast.FuncSig{
            TypeParams: {
            },
            Params: {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "a",
                        Default: nil,
                        span:    ast.Span{
                            Start: ast.Location{Line:2, Column:12},
                            End:   ast.Location{Line:2, Column:13},
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "b",
                        Default: nil,
                        span:    ast.Span{
                            Start: ast.Location{Line:2, Column:15},
                            End:   ast.Location{Line:2, Column:16},
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
            },
            Return: nil,
            Throws: nil,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: {
                        &ast.BinaryExpr{
                            Left: &ast.IdentExpr{
                                Name:   "a",
                                Source: nil,
                                span:   ast.Span{
                                    Start: ast.Location{Line:3, Column:13},
                                    End:   ast.Location{Line:3, Column:14},
                                },
                                inferredType: nil,
                            },
                            Op:    "+",
                            Right: &ast.IdentExpr{
                                Name:   "b",
                                Source: nil,
                                span:   ast.Span{
                                    Start: ast.Location{Line:3, Column:17},
                                    End:   ast.Location{Line:3, Column:18},
                                },
                                inferredType: nil,
                            },
                            span: ast.Span{
                                Start: ast.Location{Line:3, Column:13},
                                End:   ast.Location{Line:3, Column:18},
                            },
                            inferredType: nil,
                        },
                    },
                    span: ast.Span{
                        Start: ast.Location{Line:3, Column:6},
                        End:   ast.Location{Line:3, Column:18},
                    },
                },
            },
            Span: ast.Span{
                Start: ast.Location{Line:2, Column:18},
                End:   ast.Location{Line:4, Column:6},
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:4, Column:6},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:4, Column:6},
    },
}
---

[TestParseModuleNoErrors/SplitExprOnNewline - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    1,
        Pattern: &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:2, Column:9},
                End:   ast.Location{Line:2, Column:10},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.IdentExpr{
            Name:   "x",
            Source: nil,
            span:   ast.Span{
                Start: ast.Location{Line:2, Column:13},
                End:   ast.Location{Line:2, Column:14},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:2, Column:14},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:2, Column:14},
    },
}
---

[TestParseModuleNoErrors/MultilineExprInParens - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    1,
        Pattern: &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:2, Column:9},
                End:   ast.Location{Line:2, Column:10},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.BinaryExpr{
            Left: &ast.IdentExpr{
                Name:   "x",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:2, Column:14},
                    End:   ast.Location{Line:2, Column:15},
                },
                inferredType: nil,
            },
            Op:    "-",
            Right: &ast.IdentExpr{
                Name:   "y",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:3, Column:6},
                    End:   ast.Location{Line:3, Column:7},
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start: ast.Location{Line:2, Column:14},
                End:   ast.Location{Line:3, Column:7},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:3, Column:7},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:3, Column:7},
    },
}
---

[TestParseModuleNoErrors/MultilineExprInBrackets - 1]
&ast.ExprStmt{
    Expr: &ast.IndexExpr{
        Object: &ast.IdentExpr{
            Name:   "a",
            Source: nil,
            span:   ast.Span{
                Start: ast.Location{Line:2, Column:5},
                End:   ast.Location{Line:2, Column:6},
            },
            inferredType: nil,
        },
        Index: &ast.BinaryExpr{
            Left: &ast.IdentExpr{
                Name:   "base",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:2, Column:7},
                    End:   ast.Location{Line:2, Column:11},
                },
                inferredType: nil,
            },
            Op:    "+",
            Right: &ast.IdentExpr{
                Name:   "offset",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:3, Column:6},
                    End:   ast.Location{Line:3, Column:12},
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start: ast.Location{Line:2, Column:7},
                End:   ast.Location{Line:3, Column:12},
            },
            inferredType: nil,
        },
        OptChain: false,
        span:     ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:3, Column:13},
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:3, Column:13},
    },
}
---

[TestParseModuleNoErrors/SplitExprInNewScope - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "funcs",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:2, Column:9},
                End:   ast.Location{Line:2, Column:14},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.TupleExpr{
            Elems: {
                &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        TypeParams: {
                        },
                        Params: {
                        },
                        Return: nil,
                        Throws: nil,
                    },
                    Body: ast.Block{
                        Stmts: {
                            &ast.DeclStmt{
                                Decl: &ast.VarDecl{
                                    Kind:    1,
                                    Pattern: &ast.IdentPat{
                                        Name:    "a",
                                        Default: nil,
                                        span:    ast.Span{
                                            Start: ast.Location{Line:4, Column:11},
                                            End:   ast.Location{Line:4, Column:12},
                                        },
                                        inferredType: nil,
                                    },
                                    TypeAnn: nil,
                                    Init:    &ast.IdentExpr{
                                        Name:   "x",
                                        Source: nil,
                                        span:   ast.Span{
                                            Start: ast.Location{Line:4, Column:15},
                                            End:   ast.Location{Line:4, Column:16},
                                        },
                                        inferredType: nil,
                                    },
                                    export:  false,
                                    declare: false,
                                    span:    ast.Span{
                                        Start: ast.Location{Line:4, Column:7},
                                        End:   ast.Location{Line:4, Column:16},
                                    },
                                },
                                span: ast.Span{
                                    Start: ast.Location{Line:4, Column:7},
                                    End:   ast.Location{Line:4, Column:16},
                                },
                            },
                            &ast.ExprStmt{
                                Expr: &ast.UnaryExpr{
                                    Op:  1,
                                    Arg: &ast.IdentExpr{
                                        Name:   "y",
                                        Source: nil,
                                        span:   ast.Span{
                                            Start: ast.Location{Line:5, Column:8},
                                            End:   ast.Location{Line:5, Column:9},
                                        },
                                        inferredType: nil,
                                    },
                                    span: ast.Span{
                                        Start: ast.Location{Line:5, Column:7},
                                        End:   ast.Location{Line:5, Column:9},
                                    },
                                    inferredType: nil,
                                },
                                span: ast.Span{
                                    Start: ast.Location{Line:5, Column:7},
                                    End:   ast.Location{Line:5, Column:9},
                                },
                            },
                        },
                        Span: ast.Span{
                            Start: ast.Location{Line:3, Column:11},
                            End:   ast.Location{Line:6, Column:7},
                        },
                    },
                    span: ast.Span{
                        Start: ast.Location{Line:3, Column:6},
                        End:   ast.Location{Line:6, Column:7},
                    },
                    inferredType: nil,
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:2, Column:17},
                End:   ast.Location{Line:7, Column:6},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:7, Column:6},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:7, Column:6},
    },
}
---

[TestParseModuleNoErrors/ExprStmts - 2]
&ast.ExprStmt{
    Expr: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name:   "bar",
            Source: nil,
            span:   ast.Span{
                Start: ast.Location{Line:3, Column:5},
                End:   ast.Location{Line:3, Column:8},
            },
            inferredType: nil,
        },
        Args: {
        },
        OptChain: false,
        span:     ast.Span{
            Start: ast.Location{Line:3, Column:5},
            End:   ast.Location{Line:3, Column:10},
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start: ast.Location{Line:3, Column:5},
        End:   ast.Location{Line:3, Column:10},
    },
}
---

[TestParseModuleNoErrors/VarDecls - 2]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "b",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:3, Column:9},
                End:   ast.Location{Line:3, Column:10},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 10,
                span:  ast.Span{
                    Start: ast.Location{Line:3, Column:13},
                    End:   ast.Location{Line:3, Column:15},
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:3, Column:13},
                End:   ast.Location{Line:3, Column:15},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:3, Column:5},
            End:   ast.Location{Line:3, Column:15},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:3, Column:5},
        End:   ast.Location{Line:3, Column:15},
    },
}
---

[TestParseModuleNoErrors/VarDecls - 3]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "sum",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:4, Column:9},
                End:   ast.Location{Line:4, Column:12},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.BinaryExpr{
            Left: &ast.IdentExpr{
                Name:   "a",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:4, Column:15},
                    End:   ast.Location{Line:4, Column:16},
                },
                inferredType: nil,
            },
            Op:    "+",
            Right: &ast.IdentExpr{
                Name:   "b",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:4, Column:19},
                    End:   ast.Location{Line:4, Column:20},
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start: ast.Location{Line:4, Column:15},
                End:   ast.Location{Line:4, Column:20},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:4, Column:5},
            End:   ast.Location{Line:4, Column:20},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:4, Column:5},
        End:   ast.Location{Line:4, Column:20},
    },
}
---

[TestParseModuleNoErrors/FuncDecls - 2]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "sub",
            span: ast.Span{
                Start: ast.Location{Line:5, Column:8},
                End:   ast.Location{Line:5, Column:11},
            },
        },
        FuncSig: ast.FuncSig{
            TypeParams: {
            },
            Params: {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "a",
                        Default: nil,
                        span:    ast.Span{
                            Start: ast.Location{Line:5, Column:12},
                            End:   ast.Location{Line:5, Column:13},
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "b",
                        Default: nil,
                        span:    ast.Span{
                            Start: ast.Location{Line:5, Column:15},
                            End:   ast.Location{Line:5, Column:16},
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  nil,
                },
            },
            Return: nil,
            Throws: nil,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: {
                        &ast.BinaryExpr{
                            Left: &ast.IdentExpr{
                                Name:   "a",
                                Source: nil,
                                span:   ast.Span{
                                    Start: ast.Location{Line:6, Column:13},
                                    End:   ast.Location{Line:6, Column:14},
                                },
                                inferredType: nil,
                            },
                            Op:    "-",
                            Right: &ast.IdentExpr{
                                Name:   "b",
                                Source: nil,
                                span:   ast.Span{
                                    Start: ast.Location{Line:6, Column:17},
                                    End:   ast.Location{Line:6, Column:18},
                                },
                                inferredType: nil,
                            },
                            span: ast.Span{
                                Start: ast.Location{Line:6, Column:13},
                                End:   ast.Location{Line:6, Column:18},
                            },
                            inferredType: nil,
                        },
                    },
                    span: ast.Span{
                        Start: ast.Location{Line:6, Column:6},
                        End:   ast.Location{Line:6, Column:18},
                    },
                },
            },
            Span: ast.Span{
                Start: ast.Location{Line:5, Column:18},
                End:   ast.Location{Line:7, Column:6},
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:5, Column:5},
            End:   ast.Location{Line:7, Column:6},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:5, Column:5},
        End:   ast.Location{Line:7, Column:6},
    },
}
---

[TestParseModuleNoErrors/IfElse - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "x",
            Default: nil,
            span:    ast.Span{
                Start: ast.Location{Line:2, Column:9},
                End:   ast.Location{Line:2, Column:10},
            },
            inferredType: nil,
        },
        TypeAnn: nil,
        Init:    &ast.IfElseExpr{
            Cond: &ast.IdentExpr{
                Name:   "cond",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:2, Column:16},
                    End:   ast.Location{Line:2, Column:20},
                },
                inferredType: nil,
            },
            Cons: ast.Block{
                Stmts: {
                    &ast.DeclStmt{
                        Decl: &ast.VarDecl{
                            Kind:    1,
                            Pattern: &ast.IdentPat{
                                Name:    "a",
                                Default: nil,
                                span:    ast.Span{
                                    Start: ast.Location{Line:3, Column:10},
                                    End:   ast.Location{Line:3, Column:11},
                                },
                                inferredType: nil,
                            },
                            TypeAnn: nil,
                            Init:    &ast.LiteralExpr{
                                Lit: &ast.NumLit{
                                    Value: 5,
                                    span:  ast.Span{
                                        Start: ast.Location{Line:3, Column:14},
                                        End:   ast.Location{Line:3, Column:15},
                                    },
                                },
                                span: ast.Span{
                                    Start: ast.Location{Line:3, Column:14},
                                    End:   ast.Location{Line:3, Column:15},
                                },
                                inferredType: nil,
                            },
                            export:  false,
                            declare: false,
                            span:    ast.Span{
                                Start: ast.Location{Line:3, Column:6},
                                End:   ast.Location{Line:3, Column:15},
                            },
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:3, Column:6},
                            End:   ast.Location{Line:3, Column:15},
                        },
                    },
                    &ast.ExprStmt{
                        Expr: &ast.UnaryExpr{
                            Op:  1,
                            Arg: &ast.LiteralExpr{
                                Lit: &ast.NumLit{
                                    Value: 10,
                                    span:  ast.Span{
                                        Start: ast.Location{Line:4, Column:7},
                                        End:   ast.Location{Line:4, Column:9},
                                    },
                                },
                                span: ast.Span{
                                    Start: ast.Location{Line:4, Column:7},
                                    End:   ast.Location{Line:4, Column:9},
                                },
                                inferredType: nil,
                            },
                            span: ast.Span{
                                Start: ast.Location{Line:4, Column:6},
                                End:   ast.Location{Line:4, Column:9},
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:4, Column:6},
                            End:   ast.Location{Line:4, Column:9},
                        },
                    },
                },
                Span: ast.Span{
                    Start: ast.Location{Line:2, Column:21},
                    End:   ast.Location{Line:5, Column:6},
                },
            },
            Alt: {
                {
                    Block: &ast.Block{
                        Stmts: {
                            &ast.DeclStmt{
                                Decl: &ast.VarDecl{
                                    Kind:    1,
                                    Pattern: &ast.IdentPat{
                                        Name:    "b",
                                        Default: nil,
                                        span:    ast.Span{
                                            Start: ast.Location{Line:6, Column:11},
                                            End:   ast.Location{Line:6, Column:12},
                                        },
                                        inferredType: nil,
                                    },
                                    TypeAnn: nil,
                                    Init:    &ast.LiteralExpr{
                                        Lit: &ast.NumLit{
                                            Value: 10,
                                            span:  ast.Span{
                                                Start: ast.Location{Line:6, Column:15},
                                                End:   ast.Location{Line:6, Column:17},
                                            },
                                        },
                                        span: ast.Span{
                                            Start: ast.Location{Line:6, Column:15},
                                            End:   ast.Location{Line:6, Column:17},
                                        },
                                        inferredType: nil,
                                    },
                                    export:  false,
                                    declare: false,
                                    span:    ast.Span{
                                        Start: ast.Location{Line:6, Column:7},
                                        End:   ast.Location{Line:6, Column:17},
                                    },
                                },
                                span: ast.Span{
                                    Start: ast.Location{Line:6, Column:7},
                                    End:   ast.Location{Line:6, Column:17},
                                },
                            },
                            &ast.ExprStmt{
                                Expr: &ast.UnaryExpr{
                                    Op:  1,
                                    Arg: &ast.LiteralExpr{
                                        Lit: &ast.NumLit{
                                            Value: 5,
                                            span:  ast.Span{
                                                Start: ast.Location{Line:7, Column:7},
                                                End:   ast.Location{Line:7, Column:8},
                                            },
                                        },
                                        span: ast.Span{
                                            Start: ast.Location{Line:7, Column:7},
                                            End:   ast.Location{Line:7, Column:8},
                                        },
                                        inferredType: nil,
                                    },
                                    span: ast.Span{
                                        Start: ast.Location{Line:7, Column:6},
                                        End:   ast.Location{Line:7, Column:8},
                                    },
                                    inferredType: nil,
                                },
                                span: ast.Span{
                                    Start: ast.Location{Line:7, Column:6},
                                    End:   ast.Location{Line:7, Column:8},
                                },
                            },
                        },
                        Span: ast.Span{
                            Start: ast.Location{Line:5, Column:12},
                            End:   ast.Location{Line:8, Column:6},
                        },
                    },
                    Expr: nil,
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:2, Column:12},
                End:   ast.Location{Line:8, Column:6},
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:8, Column:6},
        },
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:8, Column:6},
    },
}
---

[TestParseModuleNoErrors/SplitExprOnNewline - 2]
&ast.ExprStmt{
    Expr: &ast.UnaryExpr{
        Op:  1,
        Arg: &ast.IdentExpr{
            Name:   "y",
            Source: nil,
            span:   ast.Span{
                Start: ast.Location{Line:3, Column:6},
                End:   ast.Location{Line:3, Column:7},
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start: ast.Location{Line:3, Column:5},
            End:   ast.Location{Line:3, Column:7},
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start: ast.Location{Line:3, Column:5},
        End:   ast.Location{Line:3, Column:7},
    },
}
---

[TestParseModuleNoErrors/MemberAssignment - 1]
&ast.ExprStmt{
    Expr: &ast.BinaryExpr{
        Left: &ast.MemberExpr{
            Object: &ast.IdentExpr{
                Name:   "p",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:2, Column:5},
                    End:   ast.Location{Line:2, Column:6},
                },
                inferredType: nil,
            },
            Prop: &ast.Ident{
                Name: "x",
                span: ast.Span{
                    Start: ast.Location{Line:2, Column:7},
                    End:   ast.Location{Line:2, Column:8},
                },
            },
            OptChain: false,
            span:     ast.Span{
                Start: ast.Location{Line:2, Column:5},
                End:   ast.Location{Line:2, Column:8},
            },
            inferredType: nil,
        },
        Op:    "=",
        Right: &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 5,
                span:  ast.Span{
                    Start: ast.Location{Line:2, Column:11},
                    End:   ast.Location{Line:2, Column:12},
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:2, Column:11},
                End:   ast.Location{Line:2, Column:12},
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start: ast.Location{Line:2, Column:5},
            End:   ast.Location{Line:2, Column:12},
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start: ast.Location{Line:2, Column:5},
        End:   ast.Location{Line:2, Column:12},
    },
}
---

[TestParseModuleNoErrors/MemberAssignment - 2]
&ast.ExprStmt{
    Expr: &ast.BinaryExpr{
        Left: &ast.MemberExpr{
            Object: &ast.IdentExpr{
                Name:   "p",
                Source: nil,
                span:   ast.Span{
                    Start: ast.Location{Line:3, Column:5},
                    End:   ast.Location{Line:3, Column:6},
                },
                inferredType: nil,
            },
            Prop: &ast.Ident{
                Name: "y",
                span: ast.Span{
                    Start: ast.Location{Line:3, Column:7},
                    End:   ast.Location{Line:3, Column:8},
                },
            },
            OptChain: false,
            span:     ast.Span{
                Start: ast.Location{Line:3, Column:5},
                End:   ast.Location{Line:3, Column:8},
            },
            inferredType: nil,
        },
        Op:    "=",
        Right: &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 10,
                span:  ast.Span{
                    Start: ast.Location{Line:3, Column:11},
                    End:   ast.Location{Line:3, Column:13},
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:3, Column:11},
                End:   ast.Location{Line:3, Column:13},
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start: ast.Location{Line:3, Column:5},
            End:   ast.Location{Line:3, Column:13},
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start: ast.Location{Line:3, Column:5},
        End:   ast.Location{Line:3, Column:13},
    },
}
---
